HelloUltraviolet/Fixtures/RejectedSource/FFI/UnsupportedExternABI/Expected.uv
//! Expected diagnostic metadata for the UnsupportedExternABI rejected-source specimen.

expectedDiagnostic("E-SYS-3352", "diagnostics.23.FfiDiagnosticsSupplement")
